fix alignment

--- a/routes/ai-home/style.scss
+++ b/routes/ai-home/style.scss
@@ -16,7 +16,7 @@
 
 .ai-feature-settings-form {
 	margin-top: 4px;
-	padding-left: 52px;
+	padding-left: 40px;
 	max-width: 480px;
 
 	.components-base-control__label,
